--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
 	background-color: #D3D3D3; width: 100px; position:fixed; bottom:5; left:115px;">
 	Black Lives Matter Poster</p></center>
 
-	<img src="Slide2.jpg" width="200" height="265"
+	<img src="BLM Poster.pdf" width="200" height="265"
 	style="position:fixed;bottom:115;left:85px;">
 
 	<center><p style="border:5px; border-style: solid; border-color:#A9A9A9; padding:1em; 
 	background-color: #D3D3D3; width: 100px; position:fixed; top:295; right:80px;">
 	Valentine's Day Poster</p></center>
 
-	<img src="ldp.jpg" width="205" height="275"
+	<img src="Valentine's Day Poster.pdf" width="205" height="275"
 	style="position:fixed;top:20;right:50px;">
 
 	<center><p style="border:5px; border-style: solid; border-color:#A9A9A9; padding:1em; 
 	background-color: #D3D3D3; width: 100px; position:fixed; bottom:5; left:400px;">
 	King Kong Poster</p></center>
 
-	<img src="kk.jpg" width="200" height="265"
+	<img src="draft v3.pdf" width="200" height="265"
 	style="position:fixed;bottom:115;left:370px;">
 
 	<img src="star.jpg" width="160" height="140"
