--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	background-color: #D3D3D3; width: 100px; position:fixed; bottom:5; left:400px;">
 	King Kong Poster</p></center>
 
-	<img src="draft v3.pdf" width="200" height="265"
+<img src="kk.jpg" width="200" height="265"
 	style="position:fixed;bottom:115;left:370px;">
 
 	<img src="star.jpg" width="160" height="140"
