--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	background-color: #D3D3D3; width: 100px; position:fixed; bottom:5; left:115px;">
 	Black Lives Matter Poster</p></center>
 
-	<img src="blm.jpg" width="200" height="265"
+	<img src="Slide2.jpg" width="200" height="265"
 	style="position:fixed;bottom:115;left:85px;">
 
 	<center><p style="border:5px; border-style: solid; border-color:#A9A9A9; padding:1em; 
